--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -308,6 +308,8 @@ a build is done with a different source.
 2009-10-03 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.7beta/,0.0.7beta}, codename ``Geronimo'', stamp 1465
 @item
 2010-07-05 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.8beta/,0.0.8beta}, codename ``Attila'', stamp 1658
+@item
+2010-08-22 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.9beta/,0.0.9beta}, codename ``Chuck'', stamp 2088
 @end itemize
 
 @subsection Road map
