--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-24 : Christian Mauduit <ufoot@ufoot.org>
+
+	* 0.0.9beta -> 0.0.10beta.
+
 2010-08-23 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Released 0.0.9beta.
