Using non-blocking socket on tcp connect.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-25 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Using non-blocking socket on tcp connect.
+
 2010-08-24 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added signal functions to handle server closing properly.
