Added dat module to handle mass net messages.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-25 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added dat module to handle mass net messages.
+
 	* Using non-blocking socket on tcp connect.
 
 2010-08-24 : Christian Mauduit <ufoot@ufoot.org>
