--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -1785,27 +1785,27 @@ At all. Or at least, not unless it's almost completely rewritten.
 The C code is splitted into several internal libraries. This allow
 independant testing of various game modules.
 
-The main module, the most important one, is @code{ker} (stands for ``kernel'').
+The main module, the most important one, is @code{libker} (stands for ``kernel'').
 This is were the core algorithm is. To some extent, the rest of the code is
 just about how to provide this module with the right data and environment.
 Logically, if you profle the game, you should find out that a great part
 of the CPU time is spent here. Code here is about spreading gradients, moving
 fighters and cursors.
 
-The @code{map} module is here to handle maps, it contains the code to manipulate
+The @code{libmap} module is here to handle maps, it contains the code to manipulate
 maps in memory. But it does not know how to load them from disk. This is the
-responsability of another module, @code{ldr}, which is linked against libraries
+responsability of another module, @code{libldr}, which is linked against libraries
 such as @uref{http://www.libpng.org/pub/png/libpng.html, libpng} or
 @uref{http://www.ijg.org/, libjpeg} and does the job of transforming those
 standard formats into a usable in-memory structure. There's still a third
-moduled involved in map handling, it's @code{tsk}, whose job is to load a
+moduled involved in map handling, it's @code{libtsk}, whose job is to load a
 level in the background. It has a 2-steps asynchronous loading system which allows
 the game to load maps while the user interface is still responsive, and give
 a preview of the map as soon as possible, when loading continues in the background,
 building optimizing structures which are usefull when playing but not mandatory
 just to show the map.
 
-At the other end of the algorithm-chain, the @code{pil} module will ``pilot''
+At the other end of the algorithm-chain, the @code{libpil} module will ``pilot''
 things. It's this module which will translate text readable orders (typically
 adapted for network usage) into function calls. It has event lists, keeps
 them in the right order, and will also permanently maintain
@@ -1821,13 +1821,13 @@ when we finally receive valid informations. Backup would be used to send
 bootstrap information when people are joining a new game, or to check up if
 things are going right.
 
-A special @code{bot} module is here to handle bot algorithms. A bot is just
+A special @code{libbot} module is here to handle bot algorithms. A bot is just
 a simple @code{move} function which takes a game state as an input, and returns
 an @code{x,y} position, just the way a mouse handler would. How complex a 
 bot is ``under the hood'' depends on the type of bot. Current bots are really
 basic.
 
-The @code{gfx} module handles all the graphics stuff. It is itself splitted
+The @code{libgfx} module handles all the graphics stuff. It is itself splitted
 in several sub-modules, that is, it does not do anything but load a module
 such as @code{mod-gl} which will actually contain the implementation. In an
 object-oriented language, it would be an abstract class, an inteface. The
@@ -1838,7 +1838,7 @@ has yet to be written, and it's a rare dual headed configuration which
 probably has no real-life usage. If only one graphics backend is activated
 at a time, the rest of the implementation garantees there will never
 be two concurrent calls to a function is this module. It is the
-@code{dsp} (``display'') which handles this. It fires a thread for
+@code{libdsp} (``display'') which handles this. It fires a thread for
 rendering purposes, and sends information to this thread, detecting
 automatically if it's necessary to acquire a mutex and update rendering
 informations. For the caller, this is transparent, one just has to
@@ -1846,36 +1846,37 @@ call an update function from time to time. The module will even perform
 ``dirty-reads'' on a game state being calculated, to render things
 in real time, as soon as possible.
 
-To ease up the implementation of different graphics backends, a @code{gui}
+To ease up the implementation of different graphics backends, a @code{libgui}
 module contains code which is meant to be used by any graphics backend.
 It's just a factorisation module, containing common code and interfaces,
 related to displaying things. This is where, for instance, one can find
 a high level menu object.
 
-The @code{snd} module handles sound. It's also an abstract class, an interface,
+The @code{libsnd} module handles sound. It's also an abstract class, an interface,
 which uses dynamic backends as implementations.
 
-The @code{net} module is a wrapper over different network APIs, it
+The @code{libnet} module is a wrapper over different network APIs, it
 handles Winsock and POSIX sockets in a uniform manner. 
-The @code{cli} and @code{srv} contain network client and server code,
+The @code{libcli} and @code{libsrv} contain network client and server code,
 implementing the various protocols in dynamically loadable sub-modules.
-It's the role of @code{p2p} to glue this together, handle the list
+It's the role of @code{libp2p} to glue this together, handle the list
 of available servers, the message queue, verifying nobody is cheating,
 and so on. All this modules share information about current game
-state using code & structures defined in @code{nod}, and use message
-utilities (format, parse) defined in @code{msg}.
+state using code & structures defined in @code{libnod}, and use message
+utilities (format, parse) defined in @code{libmsg}. Additionnally, @code{libdat}
+provides facilities to store old network messages and sort them.
 
-The @code{sys} module contains most system and convenience functions, it handles
+The @code{libsys} module contains most system and convenience functions, it handles
 logs, type conversions, timer, memory allocation, it's the fundamental
-module every other module depends on. It has a compation @code{glb}
+module every other module depends on. It has a compation @code{libglb}
 module with all the @uref{http://www.gnu.org/software/gnulib/,Gnulib} shared code.
 
-The @code{hlp} is used to handle keywords and internal self-documentation
-(this is what is used by @code{--list} and @code{--about}), @code{cfg}
-knows how to read and save config files,  @code{cns} handles the console,
-and @code{dyn} can load @code{.so} shared files dynamically.
+The @code{libhlp} is used to handle keywords and internal self-documentation
+(this is what is used by @code{--list} and @code{--about}), @code{libcfg}
+knows how to read and save config files,  @code{libcns} handles the console,
+and @code{libdyn} can load @code{.so} shared files dynamically.
 
-Finally there are small modules like @code{img} (to make screenshots of the game)
+Finally there are small modules like @code{libimg} (to make screenshots of the game)
 which 
 have been separated because they required special libraries to link with
 and/or did not really fit in existing modules for dependencies reasons.
