--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-26 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed suspected vthread bug when run callback is too fast.
+
 2010-08-25 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added dat module to handle mass net messages.
