--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-26 : Christian Mauduit <ufoot@ufoot.org>
 
+	* SIGHUP now restarts program.
+
 	* Fixed suspected vthread bug when run callback is too fast.
 
 2010-08-25 : Christian Mauduit <ufoot@ufoot.org>
