Added DNS cache and a lock on gethostbyname/curl functions

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-26 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added DNS cache and a lock on gethostbyname/curl functions.
+
 	* Fixed network code for MS-Windows (non-blocking sockets).
 
 	* Fixed QUIT handling in scripts.
